[project]
name = "ogsafkscreen"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "black>=25.11.0",
    "customtkinter>=5.2.2",
    "isort>=7.0.0",
    "numpy>=2.2.6",
    "pycaw>=20251023",
    "pyinstaller>=6.18.0",
    "pywin32>=311",
    "requests>=2.32.5",
    "rich>=14.2.0",
    "soundcard>=0.4.5",
    "sounddevice>=0.5.3",
    "toml>=0.10.2",
]
